[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.mypy]
check_untyped_defs = true
follow_imports = "silent"
warn_redundant_casts = "true"
warn_unused_ignores = "true"
exclude=[]

[[tool.mypy.overrides]]
module = [
  "azure.*",
  "boto3",
  "botocore.*",
  "google.*",
  "ibm_vpc.*",
  "ibm_cloud_sdk_core.*",
  "ibm_platform_services.*",
  "knack.*",
  "oci.*",
  "paramiko.*",
  "Softlayer.*",
]
ignore_missing_imports = true
no_implicit_optional = true

# TODO: fix these modules
[[tool.mypy.overrides]]
module = [
  "pycloudlib.util",
  "pycloudlib.ibm.instance",
  "pycloudlib.gce.util",
  "pycloudlib.azure.instance",
  "pycloudlib.gce.cloud",
  "pycloudlib.azure.cloud",
]
check_untyped_defs = false

[tool.ruff]
line-length = 79

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
extend-select = [
  "D",   # pydocstyle
  "I",   # isort
]

[tool.ruff.lint.pydocstyle]
convention = "pep257"
