[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.mypy]
check_untyped_defs = true
follow_imports = "silent"
warn_redundant_casts = "true"
warn_unused_ignores = "true"
exclude=[]

[[tool.mypy.overrides]]
module = [
  "azure.*",
  "boto3",
  "botocore.*",
  "google.*",
  "ibm_vpc.*",
  "ibm_cloud_sdk_core.*",
  "ibm_platform_services.*",
  "knack.*",
  "oci.*",
  "paramiko.*",
  "Softlayer.*",
]
ignore_missing_imports = true
no_implicit_optional = true

# TODO: fix these modules
[[tool.mypy.overrides]]
module = [
  "pycloudlib.util",
  "pycloudlib.ibm.instance",
  "pycloudlib.gce.util",
  "pycloudlib.azure.instance",
  "pycloudlib.gce.cloud",
  "pycloudlib.azure.cloud",
]
check_untyped_defs = false

[tool.ruff]
line-length = 100

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
extend-select = [
  "D",   # pydocstyle
  "I",   # isort
  "PLC",  # Pylint conventions
  "PLE",  # Pylint errors
  "PLW",  # Pylint warnings
]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.pytest.ini_options]
markers = [
    "mock_ssh_keys: mock the base cloud _get_ssh_keys method to avoid checking for ssh keys",
    "dont_mock_ssh_keys: if a class or method is marked with this, it will override the mock_ssh_keys marker",
    "ci: run test as part of continuous integration on PRs using GitHub Actions",
    "main_check: run test as part of continuous integration after branch has merged to main using GitHub Actions",
]
testpaths = ["tests/unit_tests"]