[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
dynamic = ["version"]
name = "pycloudlib"
description = "Python library to launch, interact, and snapshot cloud instances"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
dependencies = [
    "azure-cli-core >= 2.21.0",
    "azure-identity",
    "azure-mgmt-compute >= 17",
    "azure-mgmt-network >= 16",
    "azure-mgmt-resource >= 15",
    "boto3 >= 1.14.20",
    "botocore >= 1.17.20",
    "google-cloud-compute",
    "googleapis-common-protos >= 1.63.1",
    "ibm-cloud-sdk-core >= 3.14.0",
    "ibm-platform-services",
    "ibm-vpc >= 0.10, < 0.29.0",
    "knack >= 0.7.1",
    "oci >= 2.17.0",
    "openstacksdk >= 1.1.0, < 1.5.0",
    "paramiko >= 2.9.2",
    "protobuf",
    "pyparsing >= 2, < 3.0.0",
    "python-openstackclient >= 5.2.1",
    "pyyaml >= 5.1",
    "qemu.qmp >= 0.0.3",
    "requests >= 2.22",
    "Softlayer >= 6.0.0",
    "toml == 0.10",
]

[project.optional-dependencies]
test = [
    "mock",
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "pytest-xdist",
]
docs = [
    "myst-parser",
    "sphinx",
    "sphinx_rtd_theme",
]
dev = [
    "mypy>=1.13",
    "ruff==0.5.0",
    "types-mock>=5.0.0",
    "types-pyyaml>=6.0.12",
    "types-requests>=2.31.0",
    "types-setuptools>=67.0.0",
    "types-toml>=0.10.8",
    "packaging",
]
[dependency-groups]
dev = [
    "mypy>=1.13",
    "ruff==0.5.0",
    "types-mock>=5.0.0",
    "types-pyyaml>=6.0.12",
    "types-requests>=2.31.0",
    "types-setuptools>=67.0.0",
    "types-toml>=0.10.8",
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "pytest-xdist",
    "mock",
    "packaging",
]


[tool.mypy]
check_untyped_defs = true
follow_imports = "silent"
warn_redundant_casts = "true"
warn_unused_ignores = "true"
exclude=[]

[[tool.mypy.overrides]]
module = [
  "azure.*",
  "boto3",
  "botocore.*",
  "google.*",
  "ibm_vpc.*",
  "ibm_cloud_sdk_core.*",
  "ibm_platform_services.*",
  "knack.*",
  "oci.*",
  "paramiko.*",
  "Softlayer.*",
]
ignore_missing_imports = true
no_implicit_optional = true

# TODO: fix these modules
[[tool.mypy.overrides]]
module = [
  "pycloudlib.util",
  "pycloudlib.ibm.instance",
  "pycloudlib.gce.util",
  "pycloudlib.azure.instance",
  "pycloudlib.gce.cloud",
  "pycloudlib.azure.cloud",
]
check_untyped_defs = false

[tool.ruff]
line-length = 100

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
extend-select = [
  "D",   # pydocstyle
  "I",   # isort
  "PLC",  # Pylint conventions
  "PLE",  # Pylint errors
  "PLW",  # Pylint warnings
]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.pytest.ini_options]
markers = [
    "mock_ssh_keys: mock the base cloud _get_ssh_keys method to avoid checking for ssh keys",
    "dont_mock_ssh_keys: if a class or method is marked with this, it will override the mock_ssh_keys marker",
    "ci: run test as part of continuous integration on PRs using GitHub Actions",
    "main_check: run test as part of continuous integration after branch has merged to main using GitHub Actions",
]
testpaths = ["tests/unit_tests"]
[tool.hatch.version]
path = "VERSION"
pattern = "(?P<version>.+)"
