[metadata]
name = pycloudlib
version = file:VERSION
url = https://github.com/canonical/pycloudlib
author = pycloudlib-devs
author_email = pycloudlib-devs@lists.launchpad.net
description = Python library to launch, interact, and snapshot cloud instances
long_description = file: README.md
long_description_content_type = text/markdown
license = GNU General Public License v3 (GPLv3)
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities

[options]
python_requires = >=3.6
packages = find:
zip_safe = True
install_requires =
    azure-cli-core >= 2.21.0
    azure-identity
    azure-mgmt-compute >= 17
    azure-mgmt-network >= 16
    azure-mgmt-resource >= 15
    boto3 >= 1.14.20
    botocore >= 1.17.20
    google-cloud-compute
    googleapis-common-protos == 1.63.1 # Fixes dependency issue with google-cloud-compute and the pinned version of protobuf
    ibm-cloud-sdk-core == 3.14.0;python_version=='3.6'
    ibm-cloud-sdk-core >= 3.14.0;python_version>='3.7'
    ibm-platform-services
    ibm-vpc == 0.10;python_version=='3.6'
    ibm-vpc >= 0.10;python_version>='3.7'
    knack >= 0.7.1
    oci >= 2.17.0
    openstacksdk >= 1.1.0, < 1.5.0
    paramiko >= 2.9.2
    protobuf < 3.20.0
    pyparsing >= 2, < 3.0.0
    python-openstackclient >= 5.2.1
    pyyaml >= 5.1
    qemu.qmp >= 0.0.3
    requests >= 2.22
    Softlayer >= 6.0.0
    toml == 0.10

[options.package_data]
pycloudlib =
    py.typed
